fixed event details page cards bottom visibility

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@ body {
     color: #fff;
     font-family: 'Noto Sans Mono', monospace;
     font-size: 15px;
+    margin-bottom: 100px;
 }
 
 h1,
